# Poor3DEngine

./: CMakeLists.txt  README.md
resource/shaders/: basic.fs  debug.fs  debug.vs  debug_texture.fs  debug_texture.vs  depth.vs  phong.fs  phong.vs  phong_original.fs  test.fs  test.vs
src/Poor3D/: Poor3D.h
src/Poor3D/Core/: Core.h  CoreEngine.cpp  CoreEngine.h  Game.h  Time.h
src/Poor3D/Core/Input/: P3DKeyboard.cpp  P3DKeyboard.h  P3DMouse.cpp  P3DMouse.h
src/Poor3D/Core/Math/: Vec3.h
src/Poor3D/Core/Rendering/: P3DWindow.cpp  P3DWindow.h
src/Poor3D/Math/: Mat3.h  Mat4.cpp  Mat4.h  Math.h  TransMat4.h  Vec2f.h  Vec3.h  Vec3f.h
src/Poor3D/Rendering/: DepthTexture.cpp  DepthTexture.h  FrameBuffer.cpp  FrameBuffer.h  ImageTexture.cpp  ImageTexture.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  RenderEngine.cpp  RenderEngine.h  Rendering.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.h
src/Poor3D/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Scene_def.h  WalkerCamera.cpp  WalkerCamera.h
src/Poor3D/Shader/: .Shader.h.swp  Shader.cpp  Shader.h
src/Poor3D/Utils/: BMPLoader.cpp  GeometricGenerator.cpp  ObjLoader.cpp  Utils.h  bitmap.h
src/Poor3D/Window/: P3DKeyboard.cpp  P3DKeyboard.h  P3DMouse.cpp  P3DMouse.h  P3DWindow.cpp  P3DWindow.h  Window.h
src/Test/: test.cpp
